--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "engines": {
         "node": ">=18.0.0"
     },
+    "peerDependencies": {
+        "@babel/core": "^7.0.0-0"
+    },
     "dependencies": {
         "@babel/types": "^7.20.7",
         "husky": "^8.0.3"
