--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@babel/core": "^7.0.0-0"
     },
     "dependencies": {
+        "@babel/generator": "^7.20.14",
         "@babel/types": "^7.20.7"
     },
     "devDependencies": {
@@ -53,9 +54,9 @@
         "eslint-plugin-jest": "^27.2.1",
         "eslint-plugin-node": "^11.1.0",
         "fastify": "^4.13.0",
+        "husky": "^8.0.3",
         "jest": "^29.4.2",
         "json-schema-to-ts": "^2.6.2",
-        "husky": "^8.0.3",
         "lint-staged": "^13.1.2",
         "microtime": "^3.1.1",
         "prettier": "^2.8.4",
